# MCP-Dock

./: .gitattributes  .gitignore  .stignore  CHANGELOG.md  HEARTBEAT_ANALYSIS_REPORT.md  INSTRUCTIONS_FIELD_FIX_SUMMARY.md  INSTRUCTIONS_FIX_SUMMARY.md  MCP_COMPLIANCE_REPORT.md  MCP_v2025-03-26_Compliance_Report.md  RATE_LIMIT_OPTIMIZATION_REPORT.md  RATE_LIMIT_USAGE_GUIDE.md  README.md  README_CN.md  pyproject.toml  run.py  start.sh
docs/: CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  MCP_INSPECTOR_GUIDE.md  README.md
docs/technical/: mcp_proxy_technical.md  mcp_service_technical.md
mcp_dock/: __version__.py  main.py
mcp_dock/api/: gateway.py
mcp_dock/api/routes/: __init__.py  dynamic_proxy.py  proxy.py
mcp_dock/core/: heartbeat_manager.py  mcp_compliance.py  mcp_proxy.py  mcp_service.py  protocol_converter.py  sse_session_manager.py
mcp_dock/utils/: logging_config.py
mcp_dock/web/static/assets/: README.md
mcp_dock/web/static/css/: styles.css
mcp_dock/web/static/js/: i18n.js  main.js  main.js.improved
mcp_dock/web/templates/: index.html
scripts/: file-watcher.sh  install-service.sh  manage-service.sh  mcp-dock-service
systemd/: mcp-dock-watcher.service  mcp-dock.service
